--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,6 @@
 <h1>出品商品一覧</h1>
 <ul>
   <% @items.each do |item| %>
-    <li><a href="/items/<%= item.id %>"><%= item.name %></a></li>
+    <li><%= link_to item.name, item %></li>
   <% end %>
 </ul>
