--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,16 @@
 <!-- app/views/items/index.html.erb -->
-<h1>出品商品一覧</h1>
+<div class="col-md-12">
+  <h1 class="text-center">出品商品一覧</h1>
+</div>
+
 <ul>
   <% @items.each do |item| %>
+  <div class="col-md-12">
     <li><%= link_to item.name, item %></li>
+  </div>
   <% end %>
 </ul>
 
-<%= link_to "出品する", new_item_path %>
+<div class="col-md-12">
+  <%= link_to "出品する", new_item_path %>
+</div>
